--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/underscore.js"></script>
 		<script type="text/javascript" src="js/backbone.js"></script>
+		<script type="text/javascript" src="js/toypick.js"></script>
 		
 
 		<title></title>
