--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/underscore.js"></script>
 		<script type="text/javascript" src="js/backbone.js"></script>
-		<script type="text/javascript" src="js/toypick.js"></script>
+		<script type="text/javascript" src="js/firebase.js"></script>
+		<script type="text/javascript" src="js/toypic.js"></script>
+
 		
 
-		<title></title>
+		<title>toypick.club</title>
 
 	</head>
 
