--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
 			<div class="home-toy-header"> <!-- top stuff -->
 				<span class="col-xs-4" style="background-color: rgb(150, 108, 218)">
 					<br/>
-					<span class="home-budget-area">
-						$ <input type="text" placeholder="100.00" />
-					</span>
+					<div class="home-budget-area">
+						<label>Budget</label><br/>
+						<label>$</label> <input type="text" placeholder="100.00" />
+					</div>
 				</span>
-				<span class="col-xs-8" style="background-color: rgb(150, 216, 174)"> FILTERS AND JUNK </span>
+				<span class="col-xs-8" style="background-color: rgb(150, 216, 174)">
+					<h3>Send the kid a gift, let them pick!</h3>
+					<label>Narrow it down: </label>
+					<input type="radio" class="btn btn-primary" value="boy">Boy</input>
+					<input type="radio" class="btn btn-primary" value="girl">Girl</input>
+				</span>
 			</div>
 
 			<div class="row home-search-results"> <!-- found gifts -->
