--- a/gift-confirmed.html
+++ b/gift-confirmed.html
@@ -6,28 +6,27 @@
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	
-		<title>You got a gift!</title>
+		<title>It's yours!!</title>
 
 	</head>
 
-	<body class="gift">
+	<body class="gift gift-confirmed">
 
 		<div class=""> <!-- main container -->
 			<div class="gifts-header"> <!-- top stuff -->
-				<h1>Pick your gift, Tommy!</h1>
+				<h2>Hourray!</h2>
+				<h1>It's yours!</h1>
 			</div>
+
 
 			<div class="row gift-choices"> <!-- found gifts -->
 
-				<img src="img/product_1.jpg" alt="" class="picked" />
-				<img src="img/product_2.jpg" alt="" />
-				<img src="img/product_3.jpg" alt="" />
-				<img src="img/product_4.jpg" alt="" />
 				<img src="img/product_1.jpg" alt="" />
-				<img src="img/product_2.jpg" alt="" />
-				<img src="img/product_3.jpg" alt="" />
-				<img src="img/product_4.jpg" alt="" />
-				<img src="img/product_1.jpg" alt="" />
+
+			</div>
+
+			<div class="gift-confirmed-footer"> <!-- top stuff -->
+				<h2>The mailman is bringing your gift soon!</h2>
 			</div>
 
 
