--- a/gift-picked.html
+++ b/gift-picked.html
@@ -10,25 +10,27 @@
 
 	</head>
 
-	<body class="gift">
+	<body class="gift gift-picked">
 
 		<div class=""> <!-- main container -->
 			<div class="gifts-header"> <!-- top stuff -->
-				<h1>Pick your gift, Tommy!</h1>
+				<h1>You want this one?</h1>
 			</div>
+
+			<div class="confirm-gift">
+
+				<div class="no-back">&larr; <a href="#">No wait!</a></div>
+				<button>YES!</button>
+
+			</div>
+
 
 			<div class="row gift-choices"> <!-- found gifts -->
 
-				<img src="img/product_1.jpg" alt="" class="picked" />
-				<img src="img/product_2.jpg" alt="" />
-				<img src="img/product_3.jpg" alt="" />
-				<img src="img/product_4.jpg" alt="" />
 				<img src="img/product_1.jpg" alt="" />
-				<img src="img/product_2.jpg" alt="" />
-				<img src="img/product_3.jpg" alt="" />
-				<img src="img/product_4.jpg" alt="" />
-				<img src="img/product_1.jpg" alt="" />
+
 			</div>
+
 
 
 		</div>
