--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 	<body class="home">
 
-		<div class="container"> <!-- main container -->
+		<div class=""> <!-- main container -->
 			<div class="home-toy-header"> <!-- top stuff -->
-				<span class="col-xs-4" style="background-color: rgb(150, 108, 218)">
+				<span class="col-xs-4" style="background-color: rgb(150, 108, 218); padding-top:10px">
+					<img class="img-responsive" src="img/logo.png" />
 					<br/>
-					<div class="home-budget-area">
+					<div class="home-budget-area col-xs-8 col-xs-offset-2">
+
 						<label>Budget</label><br/>
 						<label>$</label> <input type="text" placeholder="100.00" />
 					</div>
@@ -24,17 +26,45 @@
 				<span class="col-xs-8" style="background-color: rgb(150, 216, 174)">
 					<h3>Send the kid a gift, let them pick!</h3>
 					<label>Narrow it down: </label>
-					<input type="radio" class="btn btn-primary" value="boy">Boy</input>
-					<input type="radio" class="btn btn-primary" value="girl">Girl</input>
+					<div class="btn-group" data-toggle="buttons">
+					  <label class="btn btn-primary active">
+					    <input type="radio" name="options" id="option1" autocomplete="off" value="boy" checked> Boy
+					  </label>
+					  <label class="btn btn-primary">
+					    <input type="radio" name="options" id="option2" autocomplete="off" value="girl"> Girl
+					  </label>
+					</div><br/>
+					<button class="btn btn-xl btn-view-options center-text">View Options!</button>
 				</span>
 			</div>
 
-			<div class="row home-search-results"> <!-- found gifts -->
-
+			<div class="container home-search-results"> <!-- found gifts -->
+				<div class="row toy-row-1"></div>
+				<div class="row toy-row-2"></div>
+				<div class="row toy-row-3"></div>
 			</div>
 
 			<div class="row home-toy-footer"> <!-- send stuff -->
-				<h1>Ready? Send it off!</h3>
+				<h1>Ready? Send it to the kid!</h1>
+				<br/>
+				
+				<span class="col-xs-3 col-xs-offset-1">
+					<label>Kid's name:</label>
+					<input type="text" class="form-control" id="input_child_name" placeholder="Little Timmy"/>
+				</span>
+				
+				<span class="col-xs-3">
+					<label>Parents' email:</label>
+					<input type="text" class="form-control" id="input_recieve_email" placeholder="liltimmy@gmail.com"/>
+				</span>
+
+				<span class="col-xs-3">
+					<label>Your email:</label>
+					<input type="text" class="form-control" id="input_sender_email" placeholder="uncle.awesome@gmail.com"/>
+				</span>
+				<span class="col-xs-3">
+					<button class="btn btn-success">Send Gift!</button>
+				</span>
 			</div>
 
 		</div>
@@ -51,6 +81,16 @@
 			<% _.each(current_keywords, function(kw){  %>
 				<button class="btn btn-primary"> <%= kw %> </button> 
 			<% }); %>
+		</script>
+
+
+
+		<script type="text/template" id="template_toy">
+			<span class="col-xs-3 home-toy">
+				<img class="img-responsive" src="<%= toy.get('image') %>" />
+				<p> <%= toy.get('name') %> </p>
+				<p> <%= toy.get('price') %> </p>
+			</span>
 		</script>
 
 		
