--- a/gift.html
+++ b/gift.html
@@ -11,7 +11,9 @@
 	</head>
 
 	<body class="gift">
-
+		<div class="smallogo">
+			<img src="img/logo-color.png" alt="" />
+		</div>
 		<div class=""> <!-- main container -->
 			<div class="gifts-header"> <!-- top stuff -->
 				<h1>Pick your gift, Tommy!</h1>
