--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/toypic.css">
-		<script type="text/javascript" src="js/jquery.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/lib/jquery.min.js"></script>
+		<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
 	
 		<title>toypic.club</title>
 
@@ -94,9 +94,9 @@
 		</script>
 
 		
-		<script type="text/javascript" src="js/underscore.js"></script>
-		<script type="text/javascript" src="js/backbone.js"></script>
-		<script type="text/javascript" src="js/firebase.js"></script>
+		<script type="text/javascript" src="js/lib/underscore.js"></script>
+		<script type="text/javascript" src="js/lib/backbone.js"></script>
+		<script type="text/javascript" src="js/lib/firebase.js"></script>
 		<script type="text/javascript" src="js/toypic.js"></script>
 
 </html>
