--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/toypic.css">
-		<script type="text/javascript" src="js/lib/jquery.min.js"></script>
-		<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-	
+		<script type="text/javascript" data-main="js/index" src="js/lib/require.js"></script>
 		<title>toypic.club</title>
 
 	</head>
@@ -93,10 +91,5 @@
 			</span>
 		</script>
 
-		
-		<script type="text/javascript" src="js/lib/underscore.js"></script>
-		<script type="text/javascript" src="js/lib/backbone.js"></script>
-		<script type="text/javascript" src="js/lib/firebase.js"></script>
-		<script type="text/javascript" src="js/toypic.js"></script>
 
 </html>
