moved things around

--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
 			</div>
 
 			<div class="container home-search-results"> <!-- found gifts -->
-				<div class="row toy-row-1"></div>
-				<div class="row toy-row-2"></div>
-				<div class="row toy-row-3"></div>
 			</div>
 
 			<div class="row home-toy-footer"> <!-- send stuff -->
@@ -69,6 +66,9 @@
 
 	</body>
 
+		<script type="text/template" id="gallery_view">
+
+		</script>
 
 		<script type="text/template" id="result_item">
 
