--- a/gift.html
+++ b/gift.html
@@ -14,7 +14,9 @@
 		<div class="smallogo">
 			<img src="img/logo-color.png" alt="" />
 		</div>
-		<div class=""> <!-- main container -->
+		
+
+		<div class="giftcontainer"> <!-- main container -->
 			<div class="gifts-header"> <!-- top stuff -->
 				<h1>Pick your gift, Tommy!</h1>
 			</div>
