--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div class="container"> <!-- main container -->
 			<div class="home-toy-header"> <!-- top stuff -->
 				<img src="img/tagline.png" alt="Send the kid a gift - Let them pick!" class="tagline">
+				<div class="clear"></div>
 				<div class="home-budget-area">
 					<div>
 						<label>Budget</label><br/>
