--- a/gift-confirmed.html
+++ b/gift-confirmed.html
@@ -12,7 +12,7 @@
 
 	<body class="gift gift-confirmed">
 
-		<div class=""> <!-- main container -->
+		<div class="giftcontainer"> <!-- main container -->
 			<div class="gifts-header"> <!-- top stuff -->
 				<h2>Hourray!</h2>
 				<h1>It's yours!</h1>
