--- a/gift-picked.html
+++ b/gift-picked.html
@@ -12,7 +12,7 @@
 
 	<body class="gift gift-picked">
 
-		<div class=""> <!-- main container -->
+		<div class="giftcontainer"> <!-- main container -->
 			<div class="gifts-header"> <!-- top stuff -->
 				<h1>You want this one?</h1>
 			</div>
