--- a/gift.html
+++ b/gift.html
@@ -16,12 +16,13 @@
 		</div>
 		
 
+
 		<div class="giftcontainer"> <!-- main container -->
 			<div class="gifts-header"> <!-- top stuff -->
 				
 			</div>
 
-			<div class="row gift-choices container text-center"> <!-- found gifts -->
+			<div class="gift-choices container text-center"> <!-- found gifts -->
 
 			</div>
 
