--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		<div class="container last">
 			<div class="row home-toy-footer" style="display: none"> <!-- send stuff -->
 				<h2>Ready? Send it to the kid!</h2>
+				<h4>When they choose the gift we will send you a link to buy it.</h4>
 				
 				
 				<span>
@@ -142,6 +143,7 @@
 				<p><%= toy.get('price') %></p>
 				<p><%= toy.get('selected') %></p>
 				<div class="keep">Keep</div>
+				<div class="check"></div>
 			</span>
 		</script>
 
