--- a/success.html
+++ b/success.html
@@ -5,12 +5,12 @@
 		<link rel="stylesheet" type="text/css" href="../css/toypic.css">
 		<script type="text/javascript" data-main="../js/success" src="../js/lib/require.js"></script>
 	
-		<title>You got a gift!</title>
+		<title>You sent a gift!</title>
 
 
 	</head>
 
-	<body class="gift">
+	<body class="gift success">
 		<div class="smallogo">
 			<img src="../img/logo-color.png" alt="" />
 		</div>
