--- a/gift.html
+++ b/gift.html
@@ -26,9 +26,10 @@
 
 			</div>
 
-			<div class="text-center">
-			<button class="btn btn-xl btn-view-options" id="btn_confirm" style="display:none">I WANT THIS!</button>
-			<button class="btn btn-xl btn-view-options" id="btn_cancel" style="display:none">GO BACK</button>
+			<div class="text-center" style="padding-bottom: 100px">
+			<button class="no-back" id="btn_cancel" style="display:none">&larr; No wait!</button>
+			<button class="confirm-gift btn-view-options" id="btn_confirm" style="display:none">Yes!</button>
+			
 			</div>
 
 		</div>
@@ -61,4 +62,4 @@
 
 
 
-</html>c
+</html>
