--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<label>Narrow it down: </label><br />
 						<div class="btn-group" data-toggle="buttons">
 						  <label class="btn btn-primary active">
-						    <input type="checkbox" name="options" id="option2" autocomplete="off" value="girl" checked> All
+						    <input type="checkbox" name="options" id="option2" autocomplete="off" value="all" checked> All
 						  </label>
 						  
 						  <label class="btn btn-primary">
