--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="home-budget-area">
 					<div>
 						<label>Budget</label><br/>
-						<label>$</label><input type="text" placeholder="" value="100" required />
+						<label>$</label><input id="budget-price" type="text" placeholder="" value="100" required />
 					</div>
 				</div>
 				<div class="refine-area">
