got music plugged in, somewhat

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 						<label class="btn btn-primary">
 						    <input type="checkbox" name="options" id="option2" autocomplete="off" value="books"> Books
 						  </label>
+						<label class="btn btn-primary">
+						    <input type="checkbox" name="options" id="option2" autocomplete="off" value="music"> Music
+						  </label>
 						 </div>
 						 <div class="age">Age:</div>
 						 <div class="btn-group" data-toggle="buttons">
