put send stuff back in

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 		<div class="container last">
-			<div class="row home-toy-footer" style="display: none"> <!-- send stuff -->
+			<div class="row home-toy-footer"> <!-- send stuff -->
 				<h2>Ready? Send it to the kid!</h2>
 				<h4>When they choose the gift we will send you a link to buy it.</h4>
 				
